Bugfix for negative values